# ImageProcessingLibrary

./: CMakeLists.txt  README.md
include/: BMPImageLoader.h  GrayscaleProcessor.h  IImageLoader.h  IImageProcessor.h  ISVGParser.h  Image.h  ImageLoaderFactory.h  ImageProcessor.h  ResizeProcessor.h  SVGRasterizer.h  SimpleSVGParser.h  StbImageLoader.h  TIFFImageLoader.h  WebPImageLoader.h
src/: BMPImageLoader.cpp  GrayscaleProcessor.cpp  Image.cpp  ImageLoaderFactory.cpp  ImageProcessor.cpp  ResizeProcessor.cpp  SVGRasterizer.cpp  SimpleSVGParser.cpp  StbImageLoader.cpp  TIFFImageLoader.cpp  WebPImageLoader.cpp
tests/: main.cpp
